k8s/python_app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lab-node-python
  name: lab-node-python
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: lab-node-python
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: lab-node-python
    spec:
      containers:
      - image: klemencja/app_python
        imagePullPolicy: Always
        name: app-python
