k8s/python_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
