k8s/python_app/service.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      component: apiserver
      provider: kubernetes
    name: kubernetes
    namespace: default
  spec:
    ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8443
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: lab-node-python
    name: lab-node-python
  spec:
    allocateLoadBalancerNodePorts: true
    ports:
    - nodePort: 31793
      port: 8000
      protocol: TCP
      targetPort: 8000
    selector:
      app: lab-node-python
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
