k8s/python_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: python.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: python-app-svc
                port:
                  number: 8000
